@@ -3,6 +3,7 @@
 
 * bug fix
   * password_required? should not affect length validation
+  * User cannot access sign up and similar pages if he is already signed in through a cookie or token
 
 == 1.3.3
 
